--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -227,55 +227,54 @@ We performed separate analyses for the two expressive techniques (i.e., articula
 
 \newpage
 
-\hypertarget{results-articulation}{%
-\subsection{2.2. Results (Articulation)}\label{results-articulation}}
+\hypertarget{results}{%
+\subsection{2.2. Results}\label{results}}
 
-All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}).
+All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance of the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}). To recall our predictions, if participants specifically modulate relevant aspects of the expressive techniques they are trying to teach, key-overlap time should reveal exaggerated legato/staccato when teaching articulation, and key velocity should reveal amplificaions of forte and piano when teaching dynamics.
 
-\hypertarget{interonset-intervals-iois}{%
-\subsubsection{2.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois}}
+\hypertarget{articulation-interonset-intervals-iois}{%
+\subsubsection{2.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois}}
 
 In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} \textless{} 0.001). The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with the notated articulation (\emph{p} = 0.021; \emph{Figure \ref{fig:ioi-1}}).
 
-\hypertarget{key-overlap-time-kot}{%
-\subsubsection{2.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot}}
+\hypertarget{articulation-key-overlap-time-kot}{%
+\subsubsection{2.2.2. Articulation: Key-Overlap Time (KOT)}\label{articulation-key-overlap-time-kot}}
 
 A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,30) = 1158, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.94) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 8.31, \emph{p} = 0.007, \(\eta_G^2\) = 0.011; \emph{Figure \ref{fig:kot-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -134.03 (ms), \emph{SD} = 19.86{]} than in the performing condition {[}\emph{M} = -128.35 (ms), \emph{SD} = 20.80{]} (\emph{p} = 0.004) while there was no significant difference in legato between the teaching {[}\emph{M} = 15.91 (ms), \emph{SD} = 15.49{]} and performing condition{[}\emph{M} = 14.00 (ms), \emph{SD} = 17.01{]} (\emph{p} = 0.32).
 
-\hypertarget{key-velocity-kv}{%
-\subsubsection{2.2.3. Key Velocity (KV)}\label{key-velocity-kv}}
+\hypertarget{articulation-key-velocity-kv}{%
+\subsubsection{2.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 7.38, \emph{p} = 0.011, \(\eta_G^2\) = 0.004; \emph{Figure \ref{fig:vel-1}}). However, post-hoc comparisons based on the estimated marginal means with Tukey adjustment failed to find a significant difference between the teaching {[}Legato; \emph{M} = 70.34, \emph{SD} = 6.45, Staccato; \emph{M} = 72.01, \emph{SD} = 8.74{]} and performing condition {[}Legato; \emph{M} = 70.68, \emph{SD} = 5.84, Staccato; \emph{M} = 70.42, \emph{SD} = 7.96{]} for each subcomponent (Legato; \emph{p} = 0.70, Staccato; \emph{p} = 0.07).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,30) = 7.38, \emph{p} = 0.011, \(\eta_G^2\) = 0.004; \emph{Figure \ref{fig:vel-1}}). However, post-hoc comparisons based on the estimated marginal means with Tukey adjustment did not find a significant difference between the teaching {[}Legato; \emph{M} = 70.34, \emph{SD} = 6.45, Staccato; \emph{M} = 72.01, \emph{SD} = 8.74{]} and performing condition {[}Legato; \emph{M} = 70.68, \emph{SD} = 5.84, Staccato; \emph{M} = 70.42, \emph{SD} = 7.96{]} for each subcomponent (Legato; \emph{p} = 0.70, Staccato; \emph{p} = 0.07).
 
-\hypertarget{results-dynamics}{%
-\subsection{2.3. Results (Dynamics)}\label{results-dynamics}}
-
-\hypertarget{interonset-intervals-iois-1}{%
-\subsubsection{2.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-1}}
+\hypertarget{dynamics-interonset-intervals-iois}{%
+\subsubsection{2.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois}}
 
 The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with the notated dynamics (\emph{p} = 0.111; \emph{Figure \ref{fig:ioi-1}}).
 
-\hypertarget{key-velocity-kv-1}{%
-\subsubsection{2.3.2. Key Velocity (KV)}\label{key-velocity-kv-1}}
+\hypertarget{dynamics-key-velocity-kv}{%
+\subsubsection{2.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv}}
 
 A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 370, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.74) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 6.80, \emph{p} = 0.014, \(\eta_G^2\) = 0.003; \emph{Figure \ref{fig:vel-1}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte in the teaching condition {[}\emph{M} = 82.78, \emph{SD} = 8.30{]} than in the performing condition {[}\emph{M} = 81.66, \emph{SD} = 7.43{]} (\emph{p} = 0.021) while there was no significant difference in piano between the teaching {[}\emph{M} = 60.63, \emph{SD} = 5.07{]} and performing condition{[}\emph{M} = 60.99, \emph{SD} = 4.40{]} (\emph{p} = 0.45).
 
-\hypertarget{kv-transition-points}{%
-\subsubsection{2.3.3. KV Transition Points}\label{kv-transition-points}}
+\hypertarget{dynamics-kv-transition-points}{%
+\subsubsection{2.2.6. Dynamics: KV Transition Points}\label{dynamics-kv-transition-points}}
 
-Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano; FtoP, piano to forte; PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated a KV difference for each interval by subtracting the KV value of the current note from that of the following note. Outliers were also removed with the same criteria for other dependent variables and less than 5 \% were excluded from data analysis. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -14.06, \emph{SD} = 7.20, PtoF; \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP; \emph{M} = -11.69, \emph{SD} = 5.97, PtoF; \emph{M} = 20.88, \emph{SD} = 8.67{]} (FtoP; \emph{p} = 0.002, PtoF; \emph{p} \textless{} 0.001).
+Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano; FtoP, piano to forte; PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated the KV difference for each interval by subtracting the KV value of the current note from that of the following note. Outliers were removed using the same criteria as for the other dependent variables and less than 5 \% of the data were excluded from data analysis. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano (FtoP; \emph{p} = 0.002) and from piano to forte (PtoF; \emph{p} \textless{} 0.001) in the teaching condition {[}FtoP; \emph{M} = -14.06, \emph{SD} = 7.20, PtoF; \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP; \emph{M} = -11.69, \emph{SD} = 5.97, PtoF; \emph{M} = 20.88, \emph{SD} = 8.67{]}.
 
-\hypertarget{key-overlap-time-kot-1}{%
-\subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
+\hypertarget{dynamics-key-overlap-time-kot}{%
+\subsubsection{2.2.7. Dynamics: Key-Overlap Time (KOT)}\label{dynamics-key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31; \emph{Figure \ref{fig:kot-1}}), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.42, \emph{p} = 0.520, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.000, \emph{p} = 0.99, \(\eta_G^2\) = 0.000).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) revealed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 377, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.31; \emph{Figure \ref{fig:kot-1}}), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,30) = 0.42, \emph{p} = 0.520, \(\eta_G^2\) = 0.00) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,30) = 0.000, \emph{p} = 0.99, \(\eta_G^2\) = 0.000) was significant.
 
 \hypertarget{discussion}{%
-\subsection{2.4. Discussion}\label{discussion}}
+\subsection{2.3. Discussion}\label{discussion}}
 
-The findings from Experiment 1 indicated that skilled pianists were able to modify their performance for teaching purposes. For IOIs (tempo), we found a small but significant difference only when playing the piece with the notated articulation. This could be due to the leading metronome, which was given prior to each performance. As participants tried to follow the ideal tempo through their performances, it was possible that there was only a tiny difference between the two conditions. Another possibility could be that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) when teaching articulation whereas such relation was irrelevant when teaching dynamics. With regard to KOT (articulation) and KV (dynamics), participants successfully highlight the relevant aspects of the techniques. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in term of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques in a simple musical scale.
+The findings from Experiment 1 indicated that skilled pianists modified their performance for teaching purposes. For IOIs (tempo), we found a small but significant slowing down during teaching specifically when playing the piece with the notated articulation. This finding is in line with earlier studies that found slower performance of actions in a teaching context (e.g., Brand et al., 2002; McEllin et al., 2017). However, we did not find a significant difference in tempo when participants were teaching dynamics. It could be that trying to keep the prescribed tempo (conveyed throught the leading metronome) limited the extent to which participants slowed down their performance during teaching. Another possibility is that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) and was therefore employed when teaching articulation, whereas slower performance might not help when teaching dynamics.
 
-One of the limitations of Experiment 1 is that we employed a simple musical scale, which was suitable to gain an experimental control. However the stimulus was not a naturalistic piece to implement artistic expressions. In Experiment 2, we chose one piece of music from actual piano pieces and modified it for the purpose of the experiment. We predict that participants will played more slowly regardless of the techniques to be taught or only when teaching articulation based on the finding from Experiment 1. Also, we expect that participants will be able to highlight only the relevant aspects of the techniques to be taught. More precisely, they should be able to produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, participants will make a larger contrast between forte and piano at transition points.
+The results for KOT (articulation) and KV (dynamics) showed that participants successfully highlighted the relevant aspects of articulation and dynamics. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques in a simple musical scale.
+
+In Experiment 1, we employed a simple musical scale in order to maximize experimental control. To test whether our results generalise to a more naturalistic piece, in Experiment 2, we chose an actual piano pieces and modified it for the purpose of the experiment. If pianists selectively highlight only the relevant aspects of the techniques to be taught also in a more naturalistic piece containing more opportunities for expression, they should again produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, we also predicted that participants would make a larger contrast between forte and piano at transition points, and that they might play more slowly when teaching, especially when teaching articulation.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-1-1} \caption{\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-1}
@@ -323,54 +322,51 @@ Data cleaning, preprocessing and statistical analysis were almost identical to E
 
 \clearpage
 
-\hypertarget{results-articulation-1}{%
-\subsection{3.2. Results (Articulation)}\label{results-articulation-1}}
+\hypertarget{results-1}{%
+\subsection{3.2. Results}\label{results-1}}
 
 As Experiment 1, we first report results for performance of the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli-2}, B}), followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli-2}, C}).
 
-\hypertarget{interonset-intervals-iois-2}{%
-\subsubsection{3.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-2}}
+\hypertarget{articulation-interonset-intervals-iois-1}{%
+\subsubsection{3.2.1. Articulation: Interonset Intervals (IOIs)}\label{articulation-interonset-intervals-iois-1}}
 
 A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.042{]} than in the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.034{]} while playing the piece with notated articulation (\emph{t}(18) = 2.64
 , \emph{p} = 0.017; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.026).
 
-\hypertarget{key-overlap-ratio-kor}{%
-\subsubsection{3.2.2. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor}}
+\hypertarget{articulation-key-overlap-ratio-kor}{%
+\subsubsection{3.2.2. Articulation: Key-Overlap Ratio (KOR)}\label{articulation-key-overlap-ratio-kor}}
 
 A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 2324, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.98) and a significant interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 6.90, \emph{p} = 0.017, \(\eta_G^2\) = 0.01; \emph{Figure \ref{fig:kor-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that participants produced shorter staccato in the teaching condition {[}\emph{M} = -0.77, \emph{SD} = 0.06{]} than in the performing condition {[}\emph{M} = -0.74, \emph{SD} = 0.04{]} (\emph{p} = 0.001) while there was no significant difference in legato between the teaching {[}\emph{M} = 0.12, \emph{SD} = 0.07{]} and performing condition{[}\emph{M} = 0.12, \emph{SD} = 0.07{]} (\emph{p} = 0.85).
 
-\hypertarget{key-velocity-kv-2}{%
-\subsubsection{3.2.3. Key Velocity (KV)}\label{key-velocity-kv-2}}
+\hypertarget{articulation-key-velocity-kv-1}{%
+\subsubsection{3.2.3. Articulation: Key Velocity (KV)}\label{articulation-key-velocity-kv-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.011, \(\eta_G^2\) = 0.04; \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.46, \emph{p} = 0.51, \(\eta_G^2\) = 0.001) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.80, \(\eta_G^2\) = 0.000).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) showed that there was a significant main effect of Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.011, \(\eta_G^2\) = 0.04; \emph{Figure \ref{fig:vel-2}}), reflecting louder sound for legato notes compared to staccato notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.46, \emph{p} = 0.51, \(\eta_G^2\) = 0.001) nor the interaction between Condition and Subcomponent-LS (\emph{F}(1,18) = 8.15, \emph{p} = 0.80, \(\eta_G^2\) = 0.000) was significant.
 
-\hypertarget{results-dynamics-1}{%
-\subsection{3.3. Results (Dynamics)}\label{results-dynamics-1}}
+\hypertarget{dynamics-interonset-intervals-iois-1}{%
+\subsubsection{3.2.4. Dynamics: Interonset Intervals (IOIs)}\label{dynamics-interonset-intervals-iois-1}}
 
-\hypertarget{interonset-intervals-iois-3}{%
-\subsubsection{3.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-3}}
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.037{]} while playing the piece with the notated dynamics (\emph{t}(18) = 0.37, \emph{p} = 0.72; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two conditions (\emph{p} = 0.92).
 
-A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.96, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.96, \emph{SD} = 0.037{]} while playing the piece with notated articulation (\emph{t}(18) = 0.37, \emph{p} = 0.72; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.92).
+\hypertarget{dynamics-key-velocity-kv-1}{%
+\subsubsection{3.2.5. Dynamics: Key Velocity (KV)}\label{dynamics-key-velocity-kv-1}}
 
-\hypertarget{key-velocity-kv-3}{%
-\subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.022; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte (\emph{p} = 0.036) and softer piano (\emph{p} = 0.028)in the teaching condition {[}Forte; \emph{M} = 82.55, \emph{SD} = 8.57, Piano; \emph{M} = 60.41, \emph{SD} = 3.83{]} than in the performing condition {[}Forte; \emph{M} = 80.71, \emph{SD} = 7.53, Piano; \emph{M} = 62.34, \emph{SD} = 4.93{]} than in the performing condition.
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.022; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte and softer piano in the teaching condition {[}Forte; \emph{M} = 82.55, \emph{SD} = 8.57, Piano; \emph{M} = 60.41, \emph{SD} = 3.83{]} than in the performing condition {[}Forte; \emph{M} = 80.71, \emph{SD} = 7.53, Piano; \emph{M} = 62.34, \emph{SD} = 4.93{]} than in the performing condition (Forte; \emph{p} = 0.036, Piano; \emph{p} = 0.028).
-
-\hypertarget{kv-transition-points-1}{%
-\subsubsection{3.3.3. KV Transition Points}\label{kv-transition-points-1}}
+\hypertarget{kv-transition-points}{%
+\subsubsection{3.2.6. KV Transition Points}\label{kv-transition-points}}
 
 A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 111, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,18) = 9.77, \emph{p} = 0.006, \(\eta_G^2\) = 0.064; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.35, \emph{SD} = 8.46, PtoF; \emph{M} = 20.60, \emph{SD} = 9.10{]} than in the performing condition {[}FtoP; \emph{M} = -13.71, \emph{SD} = 7.73, PtoF; \emph{M} = 15.87, \emph{SD} = 7.47{]} (FtoP; \emph{p} = 0.017, PtoF; \emph{p} = 0.003).
 
-\hypertarget{key-overlap-ratio-kor-1}{%
-\subsubsection{3.3.4. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor-1}}
+\hypertarget{dynamics-key-overlap-ratio-kor}{%
+\subsubsection{3.2.7. Dynamics: Key-Overlap Ratio (KOR)}\label{dynamics-key-overlap-ratio-kor}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 559, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.93), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.016, \emph{p} = 0.90, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 0.58, \emph{p} = 0.46, \(\eta_G^2\) = 0.001; \emph{Figure \ref{fig:kor-2}}).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 559, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.93), reflecting more key overlap for forte notes compared to piano notes. Neither the main effect of Condition (\emph{F}(1,18) = 0.016, \emph{p} = 0.90, \(\eta_G^2\) = 0.000) nor the interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 0.58, \emph{p} = 0.46, \(\eta_G^2\) = 0.001; \emph{Figure \ref{fig:kor-2}}) was significant.
 
 \hypertarget{discussion-1}{%
-\subsection{3.4. Discussion}\label{discussion-1}}
+\subsection{3.3. Discussion}\label{discussion-1}}
 
-The results from Experiment 2 demonstrated that we successfully replicated our earlier findings that skilled pianists were able to modulate their performance for teaching purposes. As Experiment 1, we observed slower performance only while teaching the notated articulation. With regard to KOR (articulation), participants highlighted articulation by producing shorter staccato. Again, there was no significant difference in legato between the two conditions as Experiment 1. In term of KV (dynamics), participants produced louder forte and softer piano, which showed a clearer pattern of exaggeration compared to Experiment 1, where only softer piano was observed. Furthermore, we found that participants made a larger contrast between forte and piano bidirectionally at transition points. Importantly, participants did not modulate their performance in term of irrelevant aspects of the techniques for teaching purposes as we found in Experiment 1. To sum, Experiment 2 demonstrated consistent results of systematic and fine-grained ways of didactic performance even in a naturalistic piece of music.
+The results from Experiment 2 replicated our earlier findings and provide further evidence that skilled pianists were able to modulate their performance for teaching purposes. As in Experiment 1, we observed slower performance only while teaching the notated articulation. Again, KOR showed that when teaching articulation, participants produced shorter staccato, while there was no significant difference in legato between the two conditions as Experiment 1. While teaching dynamics, KV showed that participants produced louder forte and softer piano. This pattern of exaggeration was more pronounced than in Experiment 1, where only louder forte was observed. Furthermore, we again found that when teaching dynamics, participants made a larger contrast between forte and piano bidirectionally at transition points. Importantly, participants did not modulate performance aspects that were irrelevant with regard to the techniques to be taught (i.e., no modulation of dynamics when teaching articulation and vice versa). Overall, Experiment 2 demonstrated systematic and fine-grained didactic performance modulations for a naturalistic piece of music.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
